dimensionsMenu fix inline stlye going off screen

--- a/css/resp-parcoord.css
+++ b/css/resp-parcoord.css
@@ -190,6 +190,6 @@ li.unchosen {
 }
 
 #dimensionsMenu li {
-  display: inline;
+  display: inline-block;
   padding: 1rem;
 }
